lesson23/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: dev
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
